@@ -250,20 +250,27 @@ Remote Interface of a Session EJB should not have a suffix.
     	externalInfoUrl="http://pmd.sourceforge.net/rules/java/j2ee.html#DoNotCallSystemExit">
     	<description>
 Web applications should not call System.exit(), since only the web container or the
-application server should stop the JVM.
+application server should stop the JVM. This rule also checks for the equivalent call Runtime.getRuntime().exit().
 	</description>
     	<priority>3</priority>
     	<properties>
     		<property name="xpath">
     			<value><![CDATA[
-//Name[starts-with(@Image,'System.exit')]
+//Name[
+    starts-with(@Image,'System.exit')
+    or
+    (starts-with(@Image,'Runtime.getRuntime') and ../../PrimarySuffix[ends-with(@Image,'exit')])
+]
     		]]></value>
     		</property>
     	</properties>
     	<example>
     		<![CDATA[
 public void bar() {
-	System.exit(0);		// never call this when running in an application server!
+    System.exit(0);                 // never call this when running in an application server!
+}
+public void foo() {
+    Runtime.getRuntime().exit(0);   // never stop the JVM manually, the container will do this.
 }
      ]]></example>
     </rule>
