@@ -343,6 +343,7 @@ Fix false positive on CastExpressions for UselessParentheses
 Fix false positive where StringBuffer.setLength(0) was using default constructor size of 16, instead of actual constructor size.
 Fix false negative for non-primitive types for VariableNamingConventions, also expanded scope to local and method/constructors, and enhanced customization options to choose between members/locals/parameters (all checked by default)
 Improve TooManyMethods rule - thanks to a patch from Riku Nykanen
+Improve DoNotCallSystemExit - thanks to a patch from Steven Christou
 Correct -benchmark reporting of Rule visits via the RuleChain
 Creating an Empty Code Ruleset and moved the following rules from Basic ruleset:
         * Empty Code Rules
